; ModuleID = '/home/carl/AnghaBench/jerryscript/jerry-core/lit/extr_lit-strings.c_lit_utf8_decr.c'
source_filename = "/home/carl/AnghaBench/jerryscript/jerry-core/lit/extr_lit-strings.c_lit_utf8_decr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LIT_UTF8_EXTRA_BYTE_MASK = common dso_local global i32 0, align 4
@LIT_UTF8_EXTRA_BYTE_MARKER = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lit_utf8_decr(i32** %0) #0 {
  %2 = alloca i32**, align 8
  %3 = alloca i32*, align 8
  store i32** %0, i32*** %2, align 8
  %4 = load i32**, i32*** %2, align 8
  %5 = load i32*, i32** %4, align 8
  %6 = call i32 @JERRY_ASSERT(i32* %5)
  %7 = load i32**, i32*** %2, align 8
  %8 = load i32*, i32** %7, align 8
  store i32* %8, i32** %3, align 8
  br label %9

9:                                                ; preds = %12, %1
  %10 = load i32*, i32** %3, align 8
  %11 = getelementptr inbounds i32, i32* %10, i32 -1
  store i32* %11, i32** %3, align 8
  br label %12

12:                                               ; preds = %9
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @LIT_UTF8_EXTRA_BYTE_MASK, align 4
  %16 = and i32 %14, %15
  %17 = sext i32 %16 to i64
  %18 = load i64, i64* @LIT_UTF8_EXTRA_BYTE_MARKER, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %9, label %20

20:                                               ; preds = %12
  %21 = load i32*, i32** %3, align 8
  %22 = load i32**, i32*** %2, align 8
  store i32* %21, i32** %22, align 8
  ret void
}

declare dso_local i32 @JERRY_ASSERT(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
